--- a/info.html
+++ b/info.html
@@ -23,7 +23,7 @@
 							<a class="nav-link active" href="info.html">Info</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disable" href="practicioners.html">Practicioners</a>
+							<a class="nav-link disable" href="#">Practicioners</a>
 						</li>
 					</ul>
 				</div>
