--- a/index.html
+++ b/index.html
@@ -29,32 +29,34 @@
 			</div>
 		</div>
 	</nav>
+		<div class="container-fluid text-center">
+			<h1>Pensacola Coastal Shotokan Karate</h1>
+			<h3>
+				<p> 
+					We train at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97">Vickery Center</a>
+				</p>
+				<p>
+					Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM
+				</p>
+			</h3>
+		
+			<div class="contact-me container-fluid">
+				<h2>Get In Touch</h2>
+				<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
+				<!-- <img class="kick-img" src="./img/karate-highkick-icon.png" alt="Side kick image"> -->
+				<h2>Traditional Karate-do</h3>
+				<p class="h4">At PCSK we practice traditional Shotokan Karate with particular emphasis on simplicity and self-defence.</p>
+				<a class="btn" href="mailto:coastalkarateshotokanpensacola@gmail.com">CONTACT US</a>
+			</div>
 
-		<h1>Pensacola Coastal Shotokan Karate</h1>
-		<h3>
-			<p> 
-				We train at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97">Vickery Center</a>
-			</p>
-			<p>
-				Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM
-			</p>
-		</h3>
-	
-		<div class="contact-me container-fluid">
-			<h2>Get In Touch</h2>
-			<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
-			<!-- <img class="kick-img" src="./img/karate-highkick-icon.png" alt="Side kick image"> -->
-			<h2>Traditional Karate-do</h3>
-			<p class="h4">At PCSK we practice traditional Shotokan Karate with particular emphasis on simplicity and self-defence.</p>
-			<a class="btn" href="mailto:coastalkarateshotokanpensacola@gmail.com">CONTACT US</a>
+			<div class="bottom-container">
+				<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola">Facebook</a>
+				<!-- <a class="footer-link" href="https://twitter.com/">Instagram</a> -->
+				<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher">Youtube</a> 
+				<p class="copyright">© 2023 Pensacola Coastal Shotokan Karate.</p>
+			</div>
 		</div>
 
-		<div class="bottom-container">
-			<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola">Facebook</a>
-			<!-- <a class="footer-link" href="https://twitter.com/">Instagram</a> -->
-			<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher">Youtube</a> 
-			<p class="copyright">© 2023 Pensacola Coastal Shotokan Karate.</p>
-		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 	</body>
 </html>
