--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
+						<a class="large nav-link active" aria-current="page" href="index.html"><span class="h2">Home</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="info.html">Info</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link disable" href="#">Practicioners</a>
+						<a class="nav-link" href="info.html"><span class="h2">Info</span></a>
 					</li>
 				</ul>
 			</div>
@@ -50,9 +47,9 @@
 			</div>
 
 			<div class="bottom-container">
-				<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola">Facebook</a>
+				<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
 				<!-- <a class="footer-link" href="https://twitter.com/">Instagram</a> -->
-				<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher">Youtube</a> 
+				<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
 				<p class="copyright">© 2023 Pensacola Coastal Shotokan Karate.</p>
 			</div>
 		</div>
