--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-	<nav class="navbar navbar-expand-lg bg-light">
+	<nav class="navbar navbar-expand bg-light">
 		<div class="container-fluid">
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -17,10 +17,10 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="large nav-link active" aria-current="page" href="index.html"><span class="h2">Home</span></a>
+						<a class="large nav-link active" aria-current="page" href="index.html"><span class="h1">Home</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="info.html"><span class="h2">Info</span></a>
+						<a class="nav-link" href="info.html"><span class="h1">Info</span></a>
 					</li>
 				</ul>
 			</div>
