--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<a class="btn" href="mailto:coastalkarateshotokanpensacola@gmail.com">CONTACT US</a>
 			</div>
 
-			<div class="bottom-container">
+			<div class="bottom-container fixed-bottom">
 				<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
 				<!-- <a class="footer-link" href="https://twitter.com/">Instagram</a> -->
 				<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
