--- a/info.html
+++ b/info.html
@@ -123,7 +123,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="bottom-container">
+		<div class="bottom-container fixed-bottom">
 			<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
 			<!-- <a class="footer-link" href="https://twitter.com/">Instagram</a> -->
 			<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
