--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 		</div>
 	</nav>
 		<div class="container-fluid text-center">
-			<h1>Pensacola Coastal Shotokan Karate</h1>
+			<h1 class="mb-3">Pensacola Coastal Shotokan Karate</h1>
 			<h3>
 				<p> 
-					We train at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97">Vickery Center</a>
+					We train at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a>
 				</p>
 				<p>
 					Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM
@@ -43,10 +43,10 @@
 				<!-- <img class="kick-img" src="./img/karate-highkick-icon.png" alt="Side kick image"> -->
 				<h2>Traditional Karate-do</h3>
 				<p class="h4">At PCSK we practice traditional Shotokan Karate with particular emphasis on simplicity and self-defence.</p>
-				<a class="btn" href="mailto:coastalkarateshotokanpensacola@gmail.com">CONTACT US</a>
+				<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">CONTACT US</a>
 			</div>
 
-			<div class="bottom-container fixed-bottom">
+			<div class="bottom-container mt-5">
 				<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
 				<!-- <a class="footer-link" href="https://twitter.com/">Instagram</a> -->
 				<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
