--- a/info.html
+++ b/info.html
@@ -122,12 +122,13 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="bottom-container mt-5 bottom-0">
-			<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
-			<!-- <a class="footer-link" href="https://twitter.com/">Instagram</a> -->
-			<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
-			<p class="copyright">© 2023 Pensacola Coastal Shotokan Karate.</p>
+			<footer class="footer mb-1 bg-light">
+				<div class="container">
+					<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
+					<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
+					<p class="copyright">© 2023 Pensacola Coastal Shotokan Karate.</p>
+				</div>
+			</footer>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 	</body>
