--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</div>
 
 
-			<footer class="footer mb-1 footer-bg-light">
+			<footer class="footer mb-1 footer-bg pt-3">
 				<div class="container">
 					<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
 					<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
