--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
 	<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-	<nav class="navbar navbar-expand bg-light">
-		<div class="container-fluid">
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
-						<a class="large nav-link active" aria-current="page" href="index.html"><span class="h1">Home</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="info.html"><span class="h1">Info</span></a>
-					</li>
-				</ul>
+		<nav class="navbar navbar-expand bg-light">
+			<div class="container-fluid">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="large nav-link active" aria-current="page" href="index.html"><span class="h1">Home</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="info.html"><span class="h1">Info</span></a>
+						</li>
+					</ul>
+				</div>
 			</div>
-		</div>
-	</nav>
-		<div class="container-fluid text-center">
+		</nav>
+
+		<div class="container-fluid h-100 text-center">
 			<h1 class="mb-3">Pensacola Coastal Shotokan Karate</h1>
 			<h3>
 				<p> 
@@ -46,15 +47,19 @@
 				<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">CONTACT US</a>
 			</div>
 
+			<div class="container flex">
 
-			<footer class="footer mb-1 footer-backg pt-3">
-				<div class="container">
-					<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
-					<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
-					<p class="copyright">© 2023 Pensacola Coastal Shotokan Karate.</p>
-				</div>
-			</footer>
+			</div>
 		</div>
+
+		<footer class="footer mb-1 footer-backg pt-3">
+			<div class="container">
+				<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
+				<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
+				<p class="copyright">© 2023 Pensacola Coastal Shotokan Karate.</p>
+			</div>
+		</footer>
+
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 	</body>
 </html>
