--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
 				<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">CONTACT US</a>
 			</div>
 
-			<div class="container flex">
-
-			</div>
+			<div class="container d-flex flex-column">
+				<div class="row bg-primary">Header</div>
+				<div class="row d-flex flex-fill bg-secondary">Fill remaining space</div>
+				<div class="row bg-danger">Footer</div>
+			  </div>
 		</div>
 
 		<footer class="footer mb-1 footer-backg pt-3">
