--- a/index.html
+++ b/index.html
@@ -27,31 +27,32 @@
 			</div>
 		</nav>
 
-		<div class="container-fluid h-100 text-center">
-			<h1 class="mb-3">Pensacola Coastal Shotokan Karate</h1>
-			<h3>
-				<p> 
-					We train at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a>
-				</p>
-				<p>
-					Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM
-				</p>
-			</h3>
-		
-			<div class="contact-me container-fluid">
-				<h2>Get In Touch</h2>
-				<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
-				<!-- <img class="kick-img" src="./img/karate-highkick-icon.png" alt="Side kick image"> -->
-				<h2>Traditional Karate-do</h3>
-				<p class="h4">At PCSK we practice traditional Shotokan Karate with particular emphasis on simplicity and self-defence.</p>
-				<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">CONTACT US</a>
-			</div>
 
-			<div class="container d-flex flex-column">
-				<div class="row bg-primary">Header</div>
-				<div class="row d-flex flex-fill bg-secondary">Fill remaining space</div>
-				<div class="row bg-danger">Footer</div>
-			  </div>
+		<div class="container d-flex flex-column">
+			<div class="row container-fluid h-100 text-center">
+				<h1 class="mb-3">Pensacola Coastal Shotokan Karate</h1>
+				<h3>
+					<p> 
+						We train at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a>
+					</p>
+					<p>
+						Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM
+					</p>
+				</h3>
+			
+				<div class="contact-me container-fluid">
+					<h2>Get In Touch</h2>
+					<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
+					<!-- <img class="kick-img" src="./img/karate-highkick-icon.png" alt="Side kick image"> -->
+					<h2>Traditional Karate-do</h3>
+					<p class="h4">At PCSK we practice traditional Shotokan Karate with particular emphasis on simplicity and self-defence.</p>
+					<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">CONTACT US</a>
+				</div>
+			</div>
+		
+			<div class="container d-flex bg-danger flex-fill">
+				Fill remaining space
+			</div>
 		</div>
 
 		<footer class="footer mb-1 footer-backg pt-3">
