--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 			</div>
 		</nav>
 
-
 		<div class="container d-flex flex-column">
-			<div class="row container-fluid h-100 text-center">
+			<div class="row text-center">
 				<h1 class="mb-3">Pensacola Coastal Shotokan Karate</h1>
 				<h3>
 					<p> 
@@ -49,18 +48,16 @@
 					<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">CONTACT US</a>
 				</div>
 			</div>
-		
-			<div class="container d-flex bg-danger flex-fill">
+	
+			<!-- <div class="container d-flex bg-danger flex-fill">
 				Fill remaining space
-			</div>
+			</div> -->
 		</div>
 
-		<footer class="footer mb-1 footer-backg pt-3">
-			<div class="container">
-				<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
-				<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
-				<p class="copyright">© 2023 Pensacola Coastal Shotokan Karate.</p>
-			</div>
+		<footer class="footer footer-backg" style="margin-block-end: 0%; margin-bottom: 0%;">
+		 	<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
+			<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
+			<p class="copyright">© 2023 Pensacola Coastal Shotokan Karate.</p>
 		</footer>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
