--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</div> -->
 		</div>
 
-		<footer class="footer footer-backg" style="margin-block-end: 0%; margin-bottom: 0%;">
+		<footer class="footer-index">
 		 	<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
 			<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
 			<p class="copyright">© 2023 Pensacola Coastal Shotokan Karate.</p>
