--- a/index.html
+++ b/index.html
@@ -27,38 +27,33 @@
 			</div>
 		</nav>
 
-		<div class="container d-flex flex-column">
-			<div class="row text-center">
-				<h1 class="mb-3">Pensacola Coastal Shotokan Karate</h1>
-				<h3>
-					<p> 
-						We train at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a>
-					</p>
-					<p>
-						Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM
-					</p>
-				</h3>
-			
-				<div class="contact-me container-fluid">
-					<h2>Get In Touch</h2>
-					<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
-					<!-- <img class="kick-img" src="./img/karate-highkick-icon.png" alt="Side kick image"> -->
-					<h2>Traditional Karate-do</h3>
-					<p class="h4">At PCSK we practice traditional Shotokan Karate with particular emphasis on simplicity and self-defence.</p>
-					<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">CONTACT US</a>
+		<div id="page-container">
+			<div id="content-wrap">
+				<div class="container-fluid text-center">
+					<div class="row justify-content-center">
+						<div class="col-12">
+							<h1 class="mb-3">Coastal Shotokan Karate</h1>
+							<h3>
+								<p> We train in Pensacola at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a></p>
+								<p> Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM </p>
+							</h3>
+							<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
+		
+						</div>
+						<div class="col-12">
+							<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">Get In Touch</a>
+						</div>
+					</div>
 				</div>
 			</div>
-	
-			<!-- <div class="container d-flex bg-danger flex-fill">
-				Fill remaining space
-			</div> -->
 		</div>
 
-		<footer class="footer-index">
-		 	<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
-			<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
-			<p class="copyright">© 2023 Pensacola Coastal Shotokan Karate.</p>
-		</footer>
+
+		<footer id="footer">
+			<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
+		   <a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
+		   <p class="copyright">© 2023 Pensacola Coastal Shotokan Karate.</p>
+	   </footer>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 	</body>
