--- a/index.html
+++ b/index.html
@@ -1,55 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Pensacola Coastal Shotokan Karate</title>
-    <meta charset="utf-8" />
-
-	<link rel="icon" href="favicon.ico?v=2">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/styles.css">
+	<head>
+    	<title>Pensacola Coastal Shotokan Karate</title>
+    	<meta charset="utf-8" />
+		<link rel="icon" href="favicon.ico?v=2">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/styles.css">
 	</head>
-	<body>
-		<nav class="navbar navbar-expand bg-light">
-			<div class="container-fluid">
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-						<li class="nav-item">
-							<a class="large nav-link active" aria-current="page" href="index.html"><span class="h1">Home</span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="info.html"><span class="h1">Info</span></a>
-						</li>
-					</ul>
+	<body class="d-flex flex-column min-vh-100">
+		<header>
+			<nav class="navbar navbar-expand bg-light">
+				<div class="container-fluid">
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+							<li class="nav-item">
+								<a class="large nav-link active" aria-current="page" href="index.html"><span class="h1">Home</span></a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="info.html"><span class="h1">Info</span></a>
+							</li>
+						</ul>
+					</div>
 				</div>
-			</div>
-		</nav>
-
-		<div id="page-container">
-			<div id="content-wrap">
-				<div class="container-fluid text-center">
-					<div class="row justify-content-center">
-						<div class="col-12">
-							<h1 class="mb-3">Coastal Shotokan Karate</h1>
-							<h3>
-								<p> We train in Pensacola at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a></p>
-								<p> Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM </p>
-							</h3>
-							<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
+			</nav>
+		</header>
 		
-						</div>
-						<div class="col-12">
-							<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">Get In Touch</a>
+		<content>
+			<section>
+				<div id="page-container">
+					<div id="content-wrap">
+						<div class="container-fluid text-center">
+							<div class="row justify-content-center">
+								<div class="col-12">
+									<h1 class="mb-3">Coastal Shotokan Karate</h1>
+									<h3>
+										<p> We train in Pensacola at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a></p>
+										<p> Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM </p>
+									</h3>
+									<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
+				
+								</div>
+								<div class="col-12">
+									<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">Get In Touch</a>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
+			</section>
+		</content>
 
-
-		<footer id="footer">
+	
+		<footer class="mt-auto">
 			<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
 		   <a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
 		   <p class="copyright">© 2023 Pensacola Coastal Shotokan Karate.</p>
