--- a/info.html
+++ b/info.html
@@ -42,56 +42,55 @@
 						<div class="container">
 							<div class="row justify-content-center">
 								<div class="col-12">
-									<h2>Shotokan</h2>
+									<h2 class="text-start">Shotokan</h1>
 									<p class="text-start h3">	
-										Shotokan is a style of Karate that was developed from a blend of various martial arts by Gichin Funakoshi and his son Gigo Funakoshi. 
+										Shotokan is a style of Karate that was developed from a blend of various martial arts by Gichin Funakoshi and his son Gigo Funakoshi in 1922. 
 										This style emphasizes the importance of mastering the foundamentals of self-defence, as well as the development of physical and mental discipline.
 									</p>
+									<br>
 									<p class="text-start h3">	
-										Shotokan training is typically divided into three main parts: kihon, kata, and kumite. Kihon, or basic training, 
-										involves the practice of fundamental techniques such as deep stances, punches, and kicks. 
-										Through endless repetition of these techniques, students develop not only physical strength and coordination but 
-										also mental focus and concentration.
+										Training is typically divided into three parts: Kihon, Kata, and Kumite. 
 									</p>
+									<br>
 									<p class="text-start h3">	
-										Shotokan training is typically divided into three main parts: kihon, kata, and kumite. Kihon, or basic training, 
-										involves the practice of fundamental techniques such as deep stances, punches, and kicks. 
-										Through endless repetition of these techniques, students develop not only physical strength and coordination but 
-										also mental focus and concentration.
+										Kihon, or basic training, involves the practice of fundamental techniques such as deep stances, punches, and kicks. Techniques are also trained and tested through the use of training pads,
+										which allow students to practice strikes and kicks with maximum power and control.
+										Through endless repetition, practicioners develop not only physical strength and coordination but also mental focus and concentration.
 									</p>
-			
+									<br>
 									<p class="text-start h3">
 										Kata, or prearranged movements, are an essential part of Shotokan training. These movements simulate a battle between the practitioner and one or more 
 										imaginary opponents and are designed to train proper form, flow, and mental clarity. The intricate and sophisticated movements 
 										of kata require a high degree of physical and mental discipline, making them a powerful tool for developing strength, agility, and self-awareness.	
 									</p>
-			
+									<br>
 									<p class="text-start h3">	
 										Kumite, or sparring, is the more practical aspect of Shotokan Karate. It can be practiced with or without contact, depending on the arrangement between students. 
 										To ensure safety, practitioners often begin with prearranged sparring sequences before moving on to more realistic forms of sparring over time. 
-										Techniques are also trained and tested through the use of training pads, which allow students to practice strikes and kicks with maximum power and control.
 									</p>
-			
+									<br>
 									<p class="text-start h3">	
 										In addition to its physical benefits, Shotokan Karate offers numerous mental and emotional benefits as well. 
 										Through the practice of Karate, students learn to cultivate virtues such as humility, respect, and perseverance, which can enhance their overall 
 										sense of well-being and self-esteem. They also learn to set goals and work towards achieving them, developing a strong sense of discipline and 
 										purpose that can carry over into all aspects of their lives.
 									</p>
-			
+									<br>
 									<p class="text-start h3">	
 										Overall, Shotokan Karate is a powerful and rewarding discipline that offers numerous benefits for individuals of all ages and skill levels. 
 										Whether you're looking to improve your physical health, develop mental discipline and resilience, 
 										or learn practical self-defense skills, Shotokan Karate can provide you with the tools and training you need to achieve your goals.	
 									</p>
+									<br>
 								</div>
 								<div class="col-12">
-									<h2>Philosophy</h2>
+									<h2 class="text-start"></h2class>Philosophy</h2>
 										<p class="text-start h3">	
 											The philosophy of Shotokan is deeply rooted in the values of humility, respect, compassion, patience, 
 											and both inward and outward calmness. The practice of Karate provides a practical means of embodying these values, 
 											as students learn to approach their training with a sense of openness and willingness to learn.
 										</p>
+										<br>
 										<p class="text-start h3">
 											Through Karate practice, students can transform themselves in a multitude of ways. 
 											One of the most significant transformations that occur is the development of self-esteem and resilience. 
@@ -99,22 +98,26 @@
 											They learn to set goals and overcome obstacles, which enhances their sense of self-worth and motivates them to strive 
 											for excellence in all areas of their lives.
 										</p>
+										<br>
 										<p class="text-start h3">
 											Another benefit of Karate practice is that it offers a safe and healthy outlet for stress and anger. 
 											Through the practice of kata, or prearranged movements, students can channel their emotions in a constructive and disciplined way, 
 											rather than resorting to harmful or destructive behavior.
 										</p>
+										<br>
 										<p class="text-start h3">
 											Karate also promotes self-discipline, which is essential for success in all areas of life. 
 											Through regular training, students learn to focus their minds and bodies, developing the ability to persevere even when faced with 
 											challenges or distractions.
 										</p>
+										<br>
 										<p class="text-start h3">
 											Moreover, Karate is a discipline and a form of self-defense that is useful for all ages, 
 											providing tools and techniques to react quickly and effectively in dangerous or life-threatening situations. 
 											By mastering these skills, students can feel more confident in their ability to protect themselves and others, 
 											which can enhance their overall sense of security and well-being.
 										</p>
+										<br>
 										<p class="text-start h3">
 											It should be clear at this point that the philosophy of Shotokan and the practice of Karate offer numerous benefits for individuals 
 											looking to develop physical and mental strength, discipline, and respect. Through Karate practice, students can cultivate virtues such 
