--- a/info.html
+++ b/info.html
@@ -53,8 +53,8 @@
 									</p>
 									<br>
 									<p class="text-start h3">	
-										Kihon, or basic training, involves the practice of fundamental techniques such as deep stances, punches, and kicks. Techniques are also trained and tested through the use of training pads,
-										which allow students to practice strikes and kicks with maximum power and control.
+										Kihon, or basic training, involves the practice of fundamental techniques such as deep stances, punches, kicks, and combinations of increasing complexity. 
+										Techniques are also trained and tested through the use of training pads, which allow students to practice strikes and kicks with maximum power and control.
 										Through endless repetition, practicioners develop not only physical strength and coordination but also mental focus and concentration.
 									</p>
 									<br>
@@ -65,8 +65,8 @@
 									</p>
 									<br>
 									<p class="text-start h3">	
-										Kumite, or sparring, is the more practical aspect of Shotokan Karate. It can be practiced with or without contact, depending on the arrangement between students. 
-										To ensure safety, practitioners often begin with prearranged sparring sequences before moving on to more realistic forms of sparring over time. 
+										Kumite, or sparring, is the more practical aspect of Shotokan Karate. It can be practiced with or without contact, depending on the arrangement between practicioners. 
+										To ensure safety, students often begin with prearranged sparring sequences before moving on to more realistic forms of sparring over time. 
 									</p>
 									<br>
 									<p class="text-start h3">	
