--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
 				</div>
 			</nav>
 		</header>
-		
 		<content>
 			<section>
-				<div id="page-container">
-					<div id="content-wrap">
+				<!-- <div id="page-container"> -->
+					<!-- <div id="content-wrap"> -->
 						<div class="container-fluid text-center">
 							<div class="row justify-content-center">
 								<div class="col-12">
@@ -48,12 +47,11 @@
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
+					<!-- </div> -->
+				<!-- </div> -->
 			</section>
 		</content>
 
-	
 		<footer class="mt-auto">
 			<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
 		   <a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
