--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<div class="container-fluid text-center">
 							<div class="row justify-content-center">
 								<div class="col-12">
-									<h1 class="mb-3">Coastal Shotokan Karate</h1>
+									<h1 class="mb-3">Coastal Shotokan Karate*</h1>
 									<h3>
 										<p> We train in Pensacola at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a></p>
 										<p> Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM </p>
