--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
     	<title>Pensacola Coastal Shotokan Karate</title>
+		<meta name=”viewport” content=”width=device-width, initial-scale=1″>
     	<meta charset="utf-8" />
 		<link rel="icon" href="favicon.ico?v=2">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
