--- a/index.html
+++ b/index.html
@@ -29,17 +29,21 @@
 		</header>
 		<content>
 			<section>
-				<div class="row justify-content-center">
-					<div class="col-12">
-						<h1 class="mb-3">Coastal Shotokan Karate</h1>
-						<h3>
-							<p> We train in Pensacola at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a></p>
-							<p> Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM </p>
-						</h3>
-						<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
-					</div>
-					<div class="col-12">
-						<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">Get In Touch</a>
+				<div id="page-container">
+					<div id="content-wrap">
+						<div class="row justify-content-center">
+							<div class="col-12">
+								<h1 class="mb-3">Coastal Shotokan Karate</h1>
+								<h3>
+									<p> We train in Pensacola at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a></p>
+									<p> Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM </p>
+								</h3>
+								<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
+							</div>
+							<div class="col-12">
+								<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">Get In Touch</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
