--- a/index.html
+++ b/index.html
@@ -27,28 +27,50 @@
 				</div>
 			</nav>
 		</header>
+
 		<content>
-			<section>
+			<section style="display: flex; align-items: center; justify-content: center;">
+				<div class="v-flex align-content-around flex-wrap flex-column">
+				  <div class="me-auto p-2 bd-highlight">
+					<h1 class="text-center">Coastal Shotokan Karate</h1>
+					<p class="h3"> We train in Pensacola at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a></p>
+					<p class="h3"> Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM </p>
+				  </div>
+				  <div class="p-2 bd-highlight">
+					<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
+				  </div>
+				  <div class="p-2 bd-highlight">
+					<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">Get In Touch</a>
+				  </div>
+				</div>
+			  </section>
+			  
+
+			<!-- <section>			
 				<div id="page-container">
-					<div id="content-wrap">
-						<div class="row justify-content-center">
-							<div class="col-12">
-								<h1 class="mb-3">Coastal Shotokan Karate</h1>
-								<h3>
-									<p> We train in Pensacola at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a></p>
-									<p> Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM </p>
-								</h3>
-								<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
-							</div>
-							<div class="col-12">
-								<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">Get In Touch</a>
-							</div>
+					<div id="content-wrap" class="center mt-auto">
+						<div class="container">
+							<div class="row justify-content-center">
+								<div class="col-12">
+									<h1 class="text-center">Coastal Shotokan Karate</h1>
+									<p class="h3"> We train in Pensacola at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a></p>
+									<p class="h3"> Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM </p>
+								</div>
+								<div class="col-12">
+									<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
+								</div>
+								<div class="col-12">
+									<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">Get In Touch</a>
+								</div>
+							</div>		
 						</div>
 					</div>
 				</div>
-			</section>
-		</content>
 
+			</section> -->
+
+
+		</content>
 		<footer class="mt-auto">
 			<a class="footer-link" href="https://www.facebook.com/CoastalShotokanofPensacola"><span class="h2">Facebook</span></a>
 			<a class="footer-link" href="https://www.youtube.com/user/tomfruitticher"><span class="h2">Youtube</span></a>
