--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 							<li class="nav-item">
 								<a class="nav-link" href="info.html"><span class="h1">Info</span></a>
 							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="kata.html"><span class="h1">Kata</span></a>
+							</li>
 						</ul>
 					</div>
 				</div>
