--- a/info.html
+++ b/info.html
@@ -38,7 +38,7 @@
 						<h1>Info</h1>
 						<img src="./img/dojokun.png" class="img-fluid" alt="dojokun">
 						<blockquote class="blockquote">
-							<p class="h5 mb-10">From right to left: <em>Seek Perfection of Character, Be Faithful, Endeavor, Respect Others, and Refrain From Violent Behavior</em></p>		
+							<p class="h5 mb-4">From right to left: <em>Seek Perfection of Character, Be Faithful, Endeavor, Respect Others, and Refrain From Violent Behavior</em></p>		
 							<p class="blockquote-footer">Gichin Funakoshi's <cite title="Source Title">rules of the dojo (dojokun)</cite></p>
 						</blockquote>
 
@@ -47,8 +47,8 @@
 								<div class="col-12">
 									<h2 class="text-start">Shotokan</h1>
 									<p class="text-start h3">	
-										Shotokan is a style of Karate that was developed from a blend of various martial arts by Gichin Funakoshi and his son Gigo Funakoshi in 1922. 
-										This style emphasizes the importance of mastering the foundamentals of self-defence, as well as the development of physical and mental discipline.
+										Shotokan Karate is a martial art that was developed from a blend of various disciplines by Gichin Funakoshi and his son Gigo Funakoshi in 1922. 
+										Shotokan emphasizes the importance of mastering the foundamentals of self-defence, as well as the development of physical and mental discipline.
 									</p>
 									<br>
 									<p class="text-start h3">	
@@ -58,13 +58,13 @@
 									<p class="text-start h3">	
 										Kihon, or basic training, involves the practice of fundamental techniques such as deep stances, punches, kicks, and combinations of increasing complexity. 
 										Techniques are also trained and tested through the use of training pads, which allow students to practice strikes and kicks with maximum power and control.
-										Through endless repetition, practicioners develop not only physical strength and coordination but also mental focus and concentration.
+										Through endless repetition, practicioners develop not only physical strength and coordination but also mental focus, concentration, and perseverance.
 									</p>
 									<br>
 									<p class="text-start h3">
 										Kata, or prearranged movements, are an essential part of Shotokan training. These movements simulate a battle between the practitioner and one or more 
 										imaginary opponents and are designed to train proper form, flow, and mental clarity. The intricate and sophisticated movements 
-										of kata require a high degree of physical and mental discipline, making them a powerful tool for developing strength, agility, and self-awareness.	
+										of eachh kata require a high degree of physical and mental discipline, making them a powerful tool for developing strength, agility, and self-awareness.	
 									</p>
 									<br>
 									<p class="text-start h3">	
@@ -95,8 +95,7 @@
 										</p>
 										<br>
 										<p class="text-start h3">
-											Through Karate practice, students can transform themselves in a multitude of ways. 
-											One of the most significant transformations that occur is the development of self-esteem and resilience. 
+											Through Karate practice, students can transform themselves in a multitude of ways.
 											As students progress in their training, they gradually build confidence in their physical and mental abilities. 
 											They learn to set goals and overcome obstacles, which enhances their sense of self-worth and motivates them to strive 
 											for excellence in all areas of their lives.
@@ -104,7 +103,7 @@
 										<br>
 										<p class="text-start h3">
 											Another benefit of Karate practice is that it offers a safe and healthy outlet for stress and anger. 
-											Through the practice of kata, or prearranged movements, students can channel their emotions in a constructive and disciplined way, 
+											Through the practice of kata, students can channel their emotions in a constructive and disciplined way, 
 											rather than resorting to harmful or destructive behavior.
 										</p>
 										<br>
@@ -119,13 +118,6 @@
 											providing tools and techniques to react quickly and effectively in dangerous or life-threatening situations. 
 											By mastering these skills, students can feel more confident in their ability to protect themselves and others, 
 											which can enhance their overall sense of security and well-being.
-										</p>
-										<br>
-										<p class="text-start h3">
-											It should be clear at this point that the philosophy of Shotokan and the practice of Karate offer numerous benefits for individuals 
-											looking to develop physical and mental strength, discipline, and respect. Through Karate practice, students can cultivate virtues such 
-											as humility, respect, and compassion, while also improving their physical health and self-defense skills. 
-											These benefits can have a profound impact on students' lives, enhancing their sense of purpose, confidence, and overall well-being.
 										</p>
 								</div>
 							</div>
