--- a/kata.html
+++ b/kata.html
@@ -38,6 +38,7 @@
 						<h1>Kata</h1>
 						<div class="container">
 							<div class="row justify-content-center">
+								<h1 class="text-start">BEGINNERS</h1>
 								<div class="col-12">
 									<h2 class="text-start">Taikyoku Shodan</h2>
 									<p class="text-start h3">	
@@ -102,6 +103,28 @@
 									</p>
 									<div class="embed-responsive embed-responsive-16by9">
 										<iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/_v_raqRVkXs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+									</div>
+								</div>
+								<div class="col-12">
+									<h2 class="text-start">Tekki Shodan</h2>
+									<p class="text-start h3">	
+										Tekki Shodan is the first kata in the Tekki (iron horse riding) series. This form has 29 movements and it is predominantly performed in horse stance (kiba-dachi). 
+										Kiai are traditionally performed at movement 15# and 29#.
+									</p>
+									<div class="embed-responsive embed-responsive-16by9">
+										<iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/gatI8x9z3d4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+									</div>
+								</div>
+								<h1 class="text-start">INTERMEDIATE</h1>
+								<div class="col-12">
+									<h2 class="text-start">Bassai Dai</h2>
+									<p class="text-start h3">	
+										Bassai Dai (To breach the fortress) is the first of the sentei kata (a series that exemplify Shotokan strong yet huble nature). 
+										This form has 42 movements and it's primary purpose is that of showing power and intensity.
+										Kiai are traditionally performed at movement 19# and 42#.
+									</p>
+									<div class="embed-responsive embed-responsive-16by9">
+										<iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/jbR8wxiMsZo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 									</div>
 								</div>
 							</div>
