--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
 				<div class="v-flex align-content-around flex-wrap flex-column">
 				  <div class="me-auto p-2 bd-highlight">
 					<h1 class="text-center">Coastal Shotokan Karate</h1>
-					<p class="h3"> We train in Pensacola at the<a class="body-link" href="https://www.cityofpensacola.com/Facilities/Facility/Details/Vickrey-Resource-Center-97"><span class="h2">Vickery Center</span></a></p>
-					<p class="h3"> Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM </p>
+
+					<p class="h3 mb-3">We train in Pensacola at the Vickery Center</p>
+					<p class="blockquote-footer">(2130 Summit Blvd, Pensacola, FL 32503)</p>
+
+					<p class="h3">Open Class On Monday and Thursday nights, from 6:00PM to 7:30PM </p>
 				  </div>
-				  <div class="p-2 bd-highlight">
+				  <div class="bd-highlight">
 					<img src="./img/karate-highkick-icon.png" class="img-fluid" alt="Side kick image">
 				  </div>
-				  <div class="p-2 bd-highlight">
+				  <div class="p-1 bd-highlight">
 					<a class="btn mt-5" href="mailto:coastalkarateshotokanpensacola@gmail.com">Get In Touch</a>
 				  </div>
 				</div>
