--- a/kata.html
+++ b/kata.html
@@ -40,10 +40,11 @@
 							<div class="row justify-content-center">
 								<div class="col-12">
 									<h2 class="text-start">Taikyoku Shodan</h2>
-									<p class="text-start h3">	
-										Taikyoku Shodan (First Cause, First Level) is the most basic of Shotokan forms, it has 20 moves, and it is primarily used to teach beginners the fundamental aspects of kata. The name of the Kata
-										is a reference ot the Karate maxim: "In Karate, there is no advantage in the first attack". In this Kata there are only down blocks (gedan-barai), body lunge punches (chudan oi-tzuki),
-										and forward stances (zenkutsu dachi). "Shouts" (Kiai) are traditionally performed at movements 8# and  16#.
+									<p class="text-start h3">										
+										Taikyoku Shodan is a basic form in Shotokan Karate that helps beginners learn the fundamental aspects of the martial art. This form consists of 20 moves and emphasizes the importance of the Karate maxim, "In Karate, there is no advantage in the first attack". 
+										The form includes down blocks (gedan-barai), body lunge punches (chudan oi-tzuki), and forward stances (zenkutsu dachi). Traditionally, "shouts" (Kiai) are performed at movements 8# and 16#.
+										During practice, the focus should be on achieving deep, stable, and correct stances, throwing precise and consistent punches at the imaginary enemy's solar plexus, 
+										and maintaining sufficient stance width throughout the kata. Most moves are executed one beat at a time, except for two sequences of three punches where there is only one half-beat between the second and third punches.
 									</p>
 									<div class="embed-responsive embed-responsive-16by9">
 										<iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/jH6bv4GDpp0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -52,8 +53,10 @@
 								<div class="col-12">
 									<h2 class="text-start">Heian Shodan</h2>
 									<p class="text-start h3">	
-										Heian Shodan (Peaceful Mind, level one) is the first form teached of the Heian series. This form has 21 movements and it is very similar to the Taikyoku series with the 
-										addition of vertical hammer-fist strike (kentsui-tate-mawashi-uchi), rising block (age-uke), knife-hand block (shuto-uke), and back-stance (kokutsu-dachi).
+										Heian Shodan is the first form in the Heian series of karate, teaching practitioners 21 movements. It is very similar to the Taikyoku series, but includes additional techniques such as the vertical hammer-fist 
+										strike (kentsui-tate-mawashi-uchi), rising block (age-uke), knife-hand block (shuto-uke), and back-stance (kokutsu-dachi). The form also introduces back-stance, with a focus on differentiating clearly between 
+										front and back stance. Heian Shodan also includes several self-defense techniques, such as escaping from a wrist grab and breaking an elbow joint.
+										Like Taikyoku, most movements are separated by one beat, except for the half beat between the second and third age-uke and the second and third oi-tsuki. 
 										Kiai are traditionally performed at movement 9# and 17#.
 									</p>
 									<div class="embed-responsive embed-responsive-16by9">
